--- a/style/main.css
+++ b/style/main.css
@@ -4,3 +4,5 @@
 @import url(./home.css);
 @import url(./about.css);
 @import url(./mobileMenu.css);
+@import url(./education.css);
+@import url(./skills.css);
