--- a/style/project.css
+++ b/style/project.css
@@ -15,7 +15,7 @@
 
 .project__wrapper {
     position: relative;
-    max-width: 1200px;
+    /* max-width: 1200px; */
 }
 
 .project__wrapper i {
@@ -27,8 +27,9 @@
     line-height: 40px;
     color: var(--main-color);
     text-align: center;
-    border: 2px solid var(--main-color);
+    /* border: 2px solid var(--main-color); */
     background: var(--text-color);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
     cursor: pointer;
     top: 50%;
     transform: translateY(-50%);
@@ -42,59 +43,65 @@
     right: -20px;
 }
 
-/* .project__btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    border: 1px solid var(--main-color);
-    font-size: 32px;
-    line-height: 40px;
-    color: var(--main-color);
-    background: var(--bg-color);
+.project__carousel {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 3) - 8px);
+    gap: 12px;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    scrollbar-width: 0;
 }
 
-.project__btn-prev {
-    left: -20px;
+.project__carousel.no-transition {
+    scroll-behavior: auto;
 }
 
-.project__btn-next {
-    right: -20px;
-} */
-
-.project__wrapper .project__carousel {
-    display: flex;
-    gap: 8px;
-    overflow-x: hidden;
+.project__carousel.dragging {
+    scroll-snap-type: none;
+    scroll-behavior: auto;
 }
 
-.project__carousel img {
-    cursor: pointer;
-    /* border: 4px solid #d2d2d2; */
+.project__carousel::-webkit-scrollbar {
+    display: none;
+}
+
+.project__carousel.dragging .project__card {
+    cursor: grab;
+    user-select: none;
+}
+
+.project__card {
+    scroll-snap-align: start;
+    /* height: 340px; */
+    width: auto;
     border-radius: 8px;
-    height: 320px;
-    width: calc((100% / 3) - 5.5px);
+    overflow: hidden;
+}
+
+.project__img {
+    height: 340px;
+}
+
+.project__img img {
     height: 100%;
+    /* width: 100%; */
     object-fit: cover;
 }
 
 @media (max-width: 900px) {
 
-    .project__carousel img {
-        width: calc((100% / 2) - 4px);
+    .project__carousel {
+        grid-auto-columns: calc((100% / 2) - 6px);
     }
 
 }
 
-@media (max-width: 550px) {
+@media (max-width: 600px) {
 
-    .project__carousel img {
-        width: 100%;
+    .project__carousel {
+        grid-auto-columns: 100%;
     }
 
 }
