--- a/style/project.css
+++ b/style/project.css
@@ -13,9 +13,8 @@
     margin-bottom: 16px;
 }
 
-.project__wrapper {
+/* .project__wrapper {
     position: relative;
-    /* max-width: 1200px; */
 }
 
 .project__wrapper i {
@@ -27,12 +26,18 @@
     line-height: 40px;
     color: var(--main-color);
     text-align: center;
-    /* border: 2px solid var(--main-color); */
     background: var(--text-color);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
     cursor: pointer;
     top: 50%;
     transform: translateY(-50%);
+    z-index: 3;
+    transition: 0.5s;
+}
+
+.project__wrapper i:hover {
+    color: var(--text-color);
+    background: var(--second-bg-color);
 }
 
 .project__wrapper i:first-child {
@@ -54,40 +59,59 @@
     scrollbar-width: 0;
 }
 
-.project__carousel.no-transition {
-    scroll-behavior: auto;
-}
-
-.project__carousel.dragging {
-    scroll-snap-type: none;
-    scroll-behavior: auto;
-}
-
 .project__carousel::-webkit-scrollbar {
     display: none;
 }
 
-.project__carousel.dragging .project__card {
-    cursor: grab;
-    user-select: none;
-}
-
 .project__card {
     scroll-snap-align: start;
-    /* height: 340px; */
     width: auto;
     border-radius: 8px;
     overflow: hidden;
+
 }
 
 .project__img {
+    position: relative;
+    z-index: 1;
     height: 340px;
+}
+
+.project__img:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
+    background: linear-gradient(0deg, rgba(17, 46, 66, 0.681) 32%, rgba(255, 255, 255, 0) 68%);
 }
 
 .project__img img {
     height: 100%;
-    /* width: 100%; */
     object-fit: cover;
+}
+
+.project__see-btn {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 8px 32px;
+    border: 2px solid var(--main-color);
+    border-radius: 8px;
+    color: var(--main-color);
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 1;
+    z-index: 3;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: 0.5s;
+}
+
+.project__see-btn:hover {
+    background: var(--second-bg-color);
 }
 
 @media (max-width: 900px) {
@@ -98,10 +122,22 @@
 
 }
 
+@media (max-width: 768px) {
+
+    .project {
+        padding: 72px 20px 20px 20px;
+    }
+
+}
+
 @media (max-width: 600px) {
 
     .project__carousel {
         grid-auto-columns: 100%;
     }
 
-}
+    .project__img {
+        height: 400px;
+    }
+
+} */
