--- a/style/project.css
+++ b/style/project.css
@@ -1,17 +1,191 @@
 .project {
-    /* background: var(--bg-color); */
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project__slider {
+    position: relative;
+    width: 100%;
+    height: 470px;
+    overflow: hidden;
+}
+
+.project__item {
+    position: absolute;
+    width: 200px;
+    height: 420px;
+    border-radius: 12px;
+    transition: 0.5s;
+    overflow: hidden;
+    left: calc(50% - 110px);
+    top: 0;
+}
+
+.project__item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.project__btn {
+    position: absolute;
+    top: 40%;
+    background: transparent;
+    color: var(--main-color);
+    font-size: xxx-large;
+    font-family: monospace;
+    font-weight: 700;
+    left: 50px;
+}
+
+.btn-next {
+    left: unset;
+    right: 50px;
+}
+
+/* .slider {
+    height: 100vh;
+    position: relative;
+}
+
+.slider .list .item {
+    position: absolute;
+    inset: 0 0 0 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.slider .list .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider .list .item::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: linear-gradient(0deg, rgba(17, 46, 66, 0.719) 32%, rgba(255, 255, 255, 0.218) 68%);
+}
+
+.slider .list .item .content {
+    position: absolute;
+    left: 10%;
+    top: 20%;
+    width: 500px;
+    max-width: 80%;
+    z-index: 1;
+}
+
+.slider .list .item.active {
+    opacity: 1;
+    z-index: 10;
+}
+
+@keyframes showContent {
+    to {
+        transform: translateY(0);
+        filter: blur(0);
+        opacity: 1;
+    }
+}
+
+.slider .list .item.active p:nth-child(1),
+.slider .list .item.active h2,
+.slider .list .item.active p:nth-child(3) {
+    transform: translateY(30px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent 0.5s 0.7s ease-in-out 1 forwards;
+}
+
+.slider .list .item.active h2 {
+    animation-delay: 1s;
+}
+
+.slider .list .item.active p:nth-child(3) {
+    animation-duration: 1.3s;
+}
+
+.arrows {
+    position: absolute;
+    top: 30%;
+    right: 50px;
+    z-index: 100;
+}
+
+.arrows button {
+    background: #edededbf;
+    font-family: monospace;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    font-size: x-large;
+    color: var(--main-color);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: 0.5s;
+}
+
+.arrows button:hover {
+    background: #112e42bf;
+}
+
+.thumbnail {
+    position: absolute;
+    left: 250px;
+    bottom: 15px;
+    z-index: 11;
+    display: flex;
+    gap: 10px;
+    height: 250px;
+    box-sizing: border-box;
+    overflow: auto;
+}
+
+.thumbnail::-webkit-scrollbar {
+    width: 0;
+}
+
+.thumbnail .item {
+    width: 150px;
+    height: 220px;
+    filter: brightness(0.5);
+    transition: 0.5s;
+    flex-shrink: 0;
+}
+
+.thumbnail .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.thumbnail .item.active {
+    filter: brightness(1.2);
+} */
+
+
+/* .project {
     padding: 72px 40px 20px 40px;
     display: flex;
     flex-direction: column;
     max-width: 1520px;
     margin: 0 auto;
     min-width: 0;
-}
+} */
 
-.project__title {
+/* .project__title {
     text-align: center;
     margin-bottom: 16px;
-}
+} */
 
 /* .project__wrapper {
     position: relative;
