--- a/style/project.css
+++ b/style/project.css
@@ -1,8 +1,16 @@
 .project {
     min-height: 100vh;
+    padding: 0 40px;
+    margin: 0 auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.project__title {
+    text-align: center;
+    margin-bottom: 16px;
 }
 
 .project__slider {
@@ -14,13 +22,24 @@
 
 .project__item {
     position: absolute;
-    width: 200px;
-    height: 420px;
+    width: 300px;
+    height: 450px;
     border-radius: 12px;
     transition: 0.5s;
     overflow: hidden;
-    left: calc(50% - 110px);
+    left: calc(50% - 150px);
     top: 0;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+.project__item::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: linear-gradient(0deg, rgba(17, 46, 66, 0.5270483193277311) 32%, rgba(255, 255, 255, 0) 68%);
 }
 
 .project__item img {
@@ -29,20 +48,76 @@
     object-fit: cover;
 }
 
+.project__see-btn {
+    position: absolute;
+    left: 50%;
+    bottom: 40px;
+    transform: translateX(-50%);
+    /* height: 36px; */
+    padding: 12px 32px;
+    background: var(--bg-color);
+    border: 1.5px solid var(--main-color);
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 1;
+    color: var(--main-color);
+    z-index: 1;
+    overflow: hidden;
+    transition: 0.5s;
+}
+
+.project__see-btn:hover {
+    background: transparent;
+}
+
 .project__btn {
     position: absolute;
-    top: 40%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: transparent;
     color: var(--main-color);
     font-size: xxx-large;
     font-family: monospace;
     font-weight: 700;
-    left: 50px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
+    transition: 0.5s;
+    z-index: 10;
+}
+
+.project__btn:hover {
+    color: var(--text-color);
+    box-shadow: none;
 }
 
 .btn-next {
-    left: unset;
-    right: 50px;
+    right: 0;
+}
+
+.btn-prev {
+    left: 0;
+}
+
+@media (max-width: 768px) {
+
+    .project {
+        padding: 0 20px;
+    }
+
+}
+
+@media (max-width: 450px) {
+
+    /* .project__btn {
+        top: 100%;
+    } */
+
 }
 
 /* .slider {
