--- a/style/home.css
+++ b/style/home.css
@@ -18,6 +18,11 @@
     gap: 8px;
 }
 
+.home__title-box {
+    display: flex;
+    gap: 12px;
+}
+
 .home__title {
     font-size: 52px;
     font-weight: 700;
@@ -42,6 +47,7 @@
 }
 
 .home__subtitle {
+    font-family: 'Poppins', sans-serif;
     font-size: 36px;
     font-weight: 700;
     color: transparent;
@@ -86,7 +92,7 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-    width: 148px;
+    width: 160px;
     height: 36px;
     padding: 8px 24px;
     background: var(--main-color);
@@ -272,6 +278,11 @@
 
     .home__right {
         width: 50%;
+    }
+
+    .home__title-box {
+        flex-direction: column;
+        gap: 4px;
     }
 
 }
