add btn select lang

--- a/style/footer.css
+++ b/style/footer.css
@@ -10,7 +10,8 @@
 
 .footer__wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 240px;
 }
 
 .footer__left {
