--- a/style/footer.css
+++ b/style/footer.css
@@ -11,6 +11,7 @@
 .footer__wrapper {
     display: flex;
     justify-content: space-between;
+    padding: 0 200px;
 }
 
 .footer__left {
@@ -94,6 +95,14 @@
     transform: scale(1.1);
 }
 
+@media (max-width: 1100px) {
+
+    .footer__wrapper {
+        padding: 0 120px;
+    }
+
+}
+
 @media (max-width: 900px) {
 
     .footer__wrapper {
@@ -123,6 +132,14 @@
     .footer__info {
         flex-direction: column;
         gap: 16px;
+    }
+
+}
+
+@media (max-width: 750px) {
+
+    .footer__wrapper {
+        padding: 0;
     }
 
 }
